--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,13 @@ attrs==23.1.0
 blinker==1.7.0
 cachetools==5.3.2
 certifi==2023.11.17
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+cryptography==41.0.7
 dataclasses-json==0.6.2
+Deprecated==1.2.14
 distro==1.8.0
 dnspython==2.4.2
 frozenlist==1.4.0
@@ -56,10 +59,14 @@ protobuf==4.25.1
 pyarrow==14.0.1
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
+pycparser==2.21
 pydantic==2.5.2
 pydantic_core==2.14.5
 pydeck==0.8.1b0
+PyGithub==2.1.1
 Pygments==2.17.2
+PyJWT==2.8.0
+PyNaCl==1.5.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
@@ -75,7 +82,7 @@ six==1.16.0
 smmap==5.0.1
 sniffio==1.3.0
 SQLAlchemy==2.0.23
-streamlit==1.28.2
+streamlit==1.29.0
 streamlit-feedback==0.1.3
 tenacity==8.2.3
 tiktoken==0.5.1
@@ -93,5 +100,6 @@ urllib3==2.1.0
 validators==0.22.0
 watchdog==3.0.0
 win32-setctime==1.1.0
+wrapt==1.16.0
 yarl==1.9.3
 zipp==3.17.0
