--- a/requirements.txt
+++ b/requirements.txt
@@ -82,6 +82,7 @@ six==1.16.0
 smmap==5.0.1
 sniffio==1.3.0
 SQLAlchemy==2.0.23
+st-pages==0.4.5
 streamlit==1.29.0
 streamlit-feedback==0.1.3
 tenacity==8.2.3
