--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ altair==5.1.2
 annotated-types==0.6.0
 anyio==3.7.1
 attrs==23.1.0
+bcrypt==4.1.2
 blinker==1.7.0
 cachetools==5.3.2
 certifi==2023.11.17
@@ -14,8 +15,10 @@ colorama==0.4.6
 cryptography==41.0.7
 dataclasses-json==0.6.2
 Deprecated==1.2.14
+deprecation==2.1.0
 distro==1.8.0
 dnspython==2.4.2
+extra-streamlit-components==0.1.60
 frozenlist==1.4.0
 gitdb==4.0.11
 GitPython==3.1.40
@@ -84,6 +87,7 @@ sniffio==1.3.0
 SQLAlchemy==2.0.23
 st-pages==0.4.5
 streamlit==1.29.0
+streamlit-authenticator==0.2.3
 streamlit-feedback==0.1.3
 tenacity==8.2.3
 tiktoken==0.5.1
