--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ grpcio-status==1.59.3
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.25.2
+icecream==2.1.3
 idna==3.5
 importlib-metadata==6.8.0
 Jinja2==3.1.2
