--- a/.streamlit/pages.toml
+++ b/.streamlit/pages.toml
@@ -7,3 +7,8 @@ icon = "🤖"
 path = "documents_manager.py"
 name = "Administracion"
 icon = "👷‍♂️"
+
+[[pages]]
+path = "services_check.py"
+name = "Servicios"
+icon = "💻"
