--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiosignal==1.3.1
 altair==5.1.2
 annotated-types==0.6.0
 anyio==3.7.1
+asttokens==2.4.1
 attrs==23.1.0
 bcrypt==4.1.2
 blinker==1.7.0
@@ -18,6 +19,7 @@ Deprecated==1.2.14
 deprecation==2.1.0
 distro==1.8.0
 dnspython==2.4.2
+executing==2.0.1
 extra-streamlit-components==0.1.60
 frozenlist==1.4.0
 gitdb==4.0.11
@@ -42,8 +44,11 @@ jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.20.0
 jsonschema-specifications==2023.11.1
-langchain==0.0.340
-langsmith==0.0.66
+langchain==0.1.1
+langchain-community==0.0.13
+langchain-core==0.1.13
+langchain-openai==0.0.3
+langsmith==0.0.83
 loguru==0.7.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
@@ -53,7 +58,7 @@ multidict==6.0.4
 mypy-extensions==1.0.0
 numpy==1.26.2
 oauthlib==3.2.2
-openai==1.3.5
+openai==1.9.0
 packaging==23.2
 pandas==2.1.3
 Pillow==10.1.0
@@ -91,7 +96,7 @@ streamlit==1.30.0
 streamlit-authenticator==0.2.3
 streamlit-feedback==0.1.3
 tenacity==8.2.3
-tiktoken==0.5.1
+tiktoken==0.5.2
 toml==0.10.2
 toolz==0.12.0
 tornado==6.3.3
