--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ langchain==0.1.1
 langchain-community==0.0.13
 langchain-core==0.1.13
 langchain-openai==0.0.3
+langchainhub==0.1.14
 langsmith==0.0.83
 loguru==0.7.2
 markdown-it-py==3.0.0
@@ -61,7 +62,7 @@ oauthlib==3.2.2
 openai==1.9.0
 packaging==23.2
 pandas==2.1.3
-Pillow==10.2.0
+Pillow==10.1.0
 pinecone-client==2.2.4
 proto-plus==1.22.3
 protobuf==4.25.1
@@ -103,6 +104,7 @@ tornado==6.3.3
 tqdm==4.66.1
 trubrics==1.6.2
 typer==0.9.0
+types-requests==2.31.0.20240106
 typing-inspect==0.9.0
 typing_extensions==4.8.0
 tzdata==2023.3
