--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiohttp==3.9.2
+aiohttp==3.9.0
 aiosignal==1.3.1
 altair==5.1.2
 annotated-types==0.6.0
@@ -6,6 +6,7 @@ anyio==3.7.1
 asttokens==2.4.1
 attrs==23.1.0
 bcrypt==4.1.2
+beautifulsoup4==4.12.3
 blinker==1.7.0
 cachetools==5.3.2
 certifi==2023.11.17
@@ -14,11 +15,14 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 cryptography==41.0.7
+curl-cffi==0.6.0b7
 dataclasses-json==0.6.2
 Deprecated==1.2.14
 deprecation==2.1.0
 distro==1.8.0
 dnspython==2.4.2
+docstring-inheritance==2.1.2
+duckduckgo_search==4.3.2
 executing==2.0.1
 extra-streamlit-components==0.1.60
 frozenlist==1.4.0
@@ -51,6 +55,7 @@ langchain-openai==0.0.3
 langchainhub==0.1.14
 langsmith==0.0.83
 loguru==0.7.2
+lxml==5.1.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 marshmallow==3.20.1
@@ -62,7 +67,7 @@ oauthlib==3.2.2
 openai==1.9.0
 packaging==23.2
 pandas==2.1.3
-Pillow==10.2.0
+Pillow==10.1.0
 pinecone-client==2.2.4
 proto-plus==1.22.3
 protobuf==4.25.1
@@ -91,11 +96,13 @@ rsa==4.9
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.0
+soupsieve==2.5
 SQLAlchemy==2.0.23
 st-pages==0.4.5
 streamlit==1.30.0
 streamlit-authenticator==0.2.3
 streamlit-feedback==0.1.3
+tavily-python==0.3.1
 tenacity==8.2.3
 tiktoken==0.5.2
 toml==0.10.2
@@ -112,6 +119,7 @@ tzlocal==5.2
 urllib3==2.1.0
 validators==0.22.0
 watchdog==3.0.0
+wikipedia==1.4.0
 win32-setctime==1.1.0
 wrapt==1.16.0
 yarl==1.9.3
