--- a/requirements.txt
+++ b/requirements.txt
@@ -105,6 +105,7 @@ streamlit-authenticator==0.2.3
 streamlit-feedback==0.1.3
 tavily-python==0.3.1
 tenacity==8.2.3
+termcolor==2.4.0
 tiktoken==0.5.2
 toml==0.10.2
 toolz==0.12.0
