--- a/requirements.txt
+++ b/requirements.txt
@@ -82,6 +82,8 @@ pydeck==0.8.1b0
 PyGithub==2.2.0
 Pygments==2.17.2
 PyJWT==2.8.0
+PyMuPDF==1.23.21
+PyMuPDFb==1.23.9
 PyNaCl==1.5.0
 python-dateutil==2.8.2
 python-dotenv==1.0.1
