--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+coloredlogs==15.0.1
 cryptography==42.0.2
 curl-cffi==0.6.0b7
 dataclasses-json==0.6.4
@@ -25,6 +26,7 @@ docstring-inheritance==2.1.2
 duckduckgo_search==4.4
 executing==2.0.1
 extra-streamlit-components==0.1.60
+flatbuffers==23.5.26
 frozenlist==1.4.1
 gitdb==4.0.11
 GitPython==3.1.41
@@ -40,6 +42,7 @@ grpcio-status==1.60.1
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.26.0
+humanfriendly==10.0
 icecream==2.1.3
 idna==3.6
 importlib-metadata==7.0.1
@@ -60,21 +63,25 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.20.2
 mdurl==0.1.2
+mpmath==1.3.0
 multidict==6.0.5
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 numpy==1.26.4
 oauthlib==3.2.2
+onnxruntime==1.17.0
 openai==1.11.1
+opencv-python==4.9.0.80
 packaging==23.2
 pandas==2.2.0
-pillow==10.2.0
+Pillow==10.0.1
 pinecone-client==3.0.2
 proto-plus==1.23.0
 protobuf==4.25.2
 pyarrow==15.0.0
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
+pyclipper==1.3.0.post5
 pycparser==2.21
 pydantic==2.6.1
 pydantic_core==2.16.2
@@ -85,10 +92,12 @@ PyJWT==2.8.0
 PyMuPDF==1.23.21
 PyMuPDFb==1.23.9
 PyNaCl==1.5.0
+pyreadline3==3.4.1
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
+rapidocr-onnxruntime==1.3.11
 referencing==0.33.0
 regex==2023.12.25
 requests==2.31.0
@@ -96,6 +105,7 @@ requests-oauthlib==1.3.1
 rich==13.7.0
 rpds-py==0.17.1
 rsa==4.9
+shapely==2.0.2
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.0
@@ -105,6 +115,7 @@ st-pages==0.4.5
 streamlit==1.31.0
 streamlit-authenticator==0.3.1
 streamlit-feedback==0.1.3
+sympy==1.12
 tavily-python==0.3.1
 tenacity==8.2.3
 termcolor==2.4.0
