--- a/.github/workflows/news_scraper.yaml
+++ b/.github/workflows/news_scraper.yaml
@@ -3,6 +3,7 @@ name: Weekly News Update
 on:
   schedule:
     - cron: '0 0 * * 0'  # Run this workflow every Sunday at midnight
+  workflow_dispatch:
 
 jobs:
   update:
