--- a/requirements.txt
+++ b/requirements.txt
@@ -3,29 +3,47 @@ aiosignal==1.3.1
 altair==5.2.0
 annotated-types==0.6.0
 anyio==4.2.0
+asttokens==2.4.1
 attrs==23.2.0
 bcrypt==4.1.2
+beautifulsoup4==4.12.3
 blinker==1.7.0
 cachetools==5.3.2
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+coloredlogs==15.0.1
+cryptography==42.0.2
+curl-cffi==0.6.0b7
 dataclasses-json==0.6.4
+Deprecated==1.2.14
+deprecation==2.1.0
 distro==1.9.0
 dnspython==2.5.0
 docstring-inheritance==2.1.2
+duckduckgo_search==4.4
 executing==2.0.1
+extra-streamlit-components==0.1.60
 flatbuffers==23.5.26
 frozenlist==1.4.1
 gitdb==4.0.11
 GitPython==3.1.41
+google-api-core==2.16.2
+google-auth==2.27.0
+google-auth-oauthlib==1.2.0
+google-cloud-core==2.4.1
+google-cloud-firestore==2.14.0
+googleapis-common-protos==1.62.0
 greenlet==3.0.3
 grpcio==1.60.1
+grpcio-status==1.60.1
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.26.0
 humanfriendly==10.0
+icecream==2.1.3
 idna==3.6
 importlib-metadata==7.0.1
 Jinja2==3.1.3
@@ -33,11 +51,13 @@ jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
-langchain==0.1.7
-langchain-community==0.0.20
-langchain-core==0.1.23
-langchain-openai==0.0.6
-langsmith==0.0.87
+langchain==0.1.5
+langchain-community==0.0.17
+langchain-core==0.1.18
+langchain-openai==0.0.5
+langchainhub==0.1.14
+langsmith==0.0.86
+loguru==0.7.2
 lxml==5.1.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -49,11 +69,13 @@ mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 numpy==1.26.4
 oauthlib==3.2.2
-openai==1.12.0
+onnxruntime==1.17.0
+openai==1.11.1
 opencv-python==4.9.0.80
 packaging==23.2
 pandas==2.2.0
 Pillow==10.0.1
+pinecone-client==3.0.2
 proto-plus==1.23.0
 protobuf==4.25.2
 pyarrow==15.0.0
@@ -64,18 +86,22 @@ pycparser==2.21
 pydantic==2.6.1
 pydantic_core==2.16.2
 pydeck==0.8.1b0
+PyGithub==2.2.0
 Pygments==2.17.2
 PyJWT==2.8.0
 PyMuPDF==1.23.21
 PyMuPDFb==1.23.9
+PyNaCl==1.5.0
 pyreadline3==3.4.1
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
+rapidocr-onnxruntime==1.3.11
 referencing==0.33.0
 regex==2023.12.25
 requests==2.31.0
+requests-oauthlib==1.3.1
 rich==13.7.0
 rpds-py==0.17.1
 rsa==4.9
@@ -85,15 +111,21 @@ smmap==5.0.1
 sniffio==1.3.0
 soupsieve==2.5
 SQLAlchemy==2.0.25
-streamlit==1.31.1
+st-pages==0.4.5
+streamlit==1.31.0
+streamlit-authenticator==0.3.1
+streamlit-feedback==0.1.3
 sympy==1.12
+tavily-python==0.3.1
 tenacity==8.2.3
 termcolor==2.4.0
-tiktoken==0.6.0
+tiktoken==0.5.2
 toml==0.10.2
 toolz==0.12.1
 tornado==6.4
 tqdm==4.66.1
+trubrics==1.6.2
+typer==0.9.0
 types-requests==2.31.0.20240125
 typing-inspect==0.9.0
 typing_extensions==4.9.0
@@ -102,6 +134,7 @@ tzlocal==5.2
 urllib3==2.2.0
 validators==0.22.0
 watchdog==3.0.0
+wikipedia==1.4.0
 win32-setctime==1.1.0
 wrapt==1.16.0
 yarl==1.9.4
