--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,14 @@ annotated-types==0.6.0
 anyio==4.2.0
 asttokens==2.4.1
 attrs==23.2.0
+backoff==2.2.1
 bcrypt==4.1.2
 beautifulsoup4==4.12.3
 blinker==1.7.0
 cachetools==5.3.2
 certifi==2024.2.2
 cffi==1.16.0
+chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
@@ -18,14 +20,17 @@ coloredlogs==15.0.1
 cryptography==42.0.2
 curl-cffi==0.6.0b7
 dataclasses-json==0.6.4
+dataclasses-json-speakeasy==0.5.11
 Deprecated==1.2.14
 deprecation==2.1.0
 distro==1.9.0
 dnspython==2.5.0
 docstring-inheritance==2.1.2
 duckduckgo_search==4.4
+emoji==2.10.1
 executing==2.0.1
 extra-streamlit-components==0.1.60
+filetype==1.2.0
 flatbuffers==23.5.26
 frozenlist==1.4.1
 gitdb==4.0.11
@@ -47,7 +52,9 @@ icecream==2.1.3
 idna==3.6
 importlib-metadata==7.0.1
 Jinja2==3.1.3
+joblib==1.3.2
 jsonpatch==1.33
+jsonpath-python==1.0.6
 jsonpointer==2.4
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
@@ -56,6 +63,7 @@ langchain-community==0.0.20
 langchain-core==0.1.23
 langchain-openai==0.0.5
 langchainhub==0.1.14
+langdetect==1.0.9
 langsmith==0.0.87
 loguru==0.7.2
 lxml==5.1.0
@@ -67,6 +75,7 @@ mpmath==1.3.0
 multidict==6.0.5
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
+nltk==3.8.1
 numpy==1.26.4
 oauthlib==3.2.2
 onnxruntime==1.17.0
@@ -95,8 +104,11 @@ PyNaCl==1.5.0
 pyreadline3==3.4.1
 python-dateutil==2.8.2
 python-dotenv==1.0.1
+python-iso639==2024.2.7
+python-magic==0.4.27
 pytz==2024.1
 PyYAML==6.0.1
+rapidfuzz==3.6.1
 rapidocr-onnxruntime==1.3.11
 referencing==0.33.0
 regex==2023.12.25
@@ -116,6 +128,7 @@ streamlit==1.31.0
 streamlit-authenticator==0.3.1
 streamlit-feedback==0.1.3
 sympy==1.12
+tabulate==0.9.0
 tavily-python==0.3.1
 tenacity==8.2.3
 termcolor==2.4.0
@@ -131,6 +144,8 @@ typing-inspect==0.9.0
 typing_extensions==4.9.0
 tzdata==2023.4
 tzlocal==5.2
+unstructured==0.12.4
+unstructured-client==0.18.0
 urllib3==2.2.0
 validators==0.22.0
 watchdog==3.0.0
