--- a/requirements.txt
+++ b/requirements.txt
@@ -30,16 +30,19 @@ duckduckgo_search==4.4
 emoji==2.10.1
 executing==2.0.1
 extra-streamlit-components==0.1.60
+fake-useragent==1.4.0
 filetype==1.2.0
 flatbuffers==23.5.26
 frozenlist==1.4.1
 gitdb==4.0.11
 GitPython==3.1.41
+google-ai-generativelanguage==0.4.0
 google-api-core==2.16.2
 google-auth==2.27.0
 google-auth-oauthlib==1.2.0
 google-cloud-core==2.4.1
 google-cloud-firestore==2.14.0
+google-generativeai==0.3.2
 googleapis-common-protos==1.62.0
 greenlet==3.0.3
 grpcio==1.60.1
@@ -61,7 +64,9 @@ jsonschema-specifications==2023.12.1
 langchain==0.1.7
 langchain-community==0.0.20
 langchain-core==0.1.23
+langchain-google-genai==0.0.9
 langchain-openai==0.0.5
+langchain-pinecone==0.0.2
 langchainhub==0.1.14
 langdetect==1.0.9
 langsmith==0.0.87
