--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.9.3
 aiosignal==1.3.1
 altair==5.2.0
 annotated-types==0.6.0
+antlr4-python3-runtime==4.9.3
 anyio==4.2.0
 asttokens==2.4.1
 attrs==23.2.0
@@ -17,8 +18,10 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 coloredlogs==15.0.1
+contourpy==1.2.0
 cryptography==42.0.2
 curl-cffi==0.6.0b7
+cycler==0.12.1
 dataclasses-json==0.6.4
 dataclasses-json-speakeasy==0.5.11
 Deprecated==1.2.14
@@ -27,13 +30,18 @@ distro==1.9.0
 dnspython==2.5.0
 docstring-inheritance==2.1.2
 duckduckgo_search==4.4
+effdet==0.4.1
 emoji==2.10.1
+et-xmlfile==1.1.0
 executing==2.0.1
 extra-streamlit-components==0.1.60
 fake-useragent==1.4.0
+filelock==3.13.1
 filetype==1.2.0
 flatbuffers==23.5.26
+fonttools==4.49.0
 frozenlist==1.4.1
+fsspec==2024.2.0
 gitdb==4.0.11
 GitPython==3.1.41
 google-ai-generativelanguage==0.4.0
@@ -50,10 +58,12 @@ grpcio-status==1.60.1
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.26.0
+huggingface-hub==0.20.3
 humanfriendly==10.0
 icecream==2.1.3
 idna==3.6
 importlib-metadata==7.0.1
+iopath==0.1.10
 Jinja2==3.1.3
 joblib==1.3.2
 jsonpatch==1.33
@@ -61,6 +71,7 @@ jsonpath-python==1.0.6
 jsonpointer==2.4
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
 langchain==0.1.7
 langchain-community==0.0.20
 langchain-core==0.1.23
@@ -70,32 +81,48 @@ langchain-pinecone==0.0.2
 langchainhub==0.1.14
 langdetect==1.0.9
 langsmith==0.0.87
+layoutparser==0.3.4
 loguru==0.7.2
 lxml==5.1.0
+Markdown==3.5.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.20.2
+matplotlib==3.8.3
 mdurl==0.1.2
 mpmath==1.3.0
+msg-parser==1.2.0
 multidict==6.0.5
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
+networkx==3.2.1
 nltk==3.8.1
 numpy==1.26.4
 oauthlib==3.2.2
-onnxruntime==1.17.0
+olefile==0.47
+omegaconf==2.3.0
+onnx==1.15.0
+onnxruntime==1.15.1
 openai==1.11.1
 opencv-python==4.9.0.80
+openpyxl==3.1.2
 packaging==23.2
 pandas==2.2.0
+pdf2image==1.17.0
+pdfminer.six==20221105
+pdfplumber==0.10.4
+pikepdf==8.13.0
 Pillow==10.0.1
+pillow_heif==0.15.0
 pinecone-client==3.0.2
+portalocker==2.8.2
 proto-plus==1.23.0
 protobuf==4.25.2
 pyarrow==15.0.0
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pyclipper==1.3.0.post5
+pycocotools==2.0.7
 pycparser==2.21
 pydantic==2.6.1
 pydantic_core==2.16.2
@@ -106,12 +133,21 @@ PyJWT==2.8.0
 PyMuPDF==1.23.21
 PyMuPDFb==1.23.9
 PyNaCl==1.5.0
+pypandoc==1.13
+pyparsing==3.1.1
+pypdf==4.0.1
+pypdfium2==4.27.0
 pyreadline3==3.4.1
+pytesseract==0.3.10
 python-dateutil==2.8.2
+python-docx==1.1.0
 python-dotenv==1.0.1
 python-iso639==2024.2.7
 python-magic==0.4.27
+python-multipart==0.0.9
+python-pptx==0.6.23
 pytz==2024.1
+pywin32==306
 PyYAML==6.0.1
 rapidfuzz==3.6.1
 rapidocr-onnxruntime==1.3.11
@@ -122,6 +158,8 @@ requests-oauthlib==1.3.1
 rich==13.7.0
 rpds-py==0.17.1
 rsa==4.9
+safetensors==0.4.2
+scipy==1.12.0
 shapely==2.0.2
 six==1.16.0
 smmap==5.0.1
@@ -138,10 +176,15 @@ tavily-python==0.3.1
 tenacity==8.2.3
 termcolor==2.4.0
 tiktoken==0.5.2
+timm==0.9.12
+tokenizers==0.15.2
 toml==0.10.2
 toolz==0.12.1
+torch==2.2.0
+torchvision==0.17.0
 tornado==6.4
 tqdm==4.66.1
+transformers==4.37.2
 trubrics==1.6.2
 typer==0.9.0
 types-requests==2.31.0.20240125
@@ -151,11 +194,15 @@ tzdata==2023.4
 tzlocal==5.2
 unstructured==0.12.4
 unstructured-client==0.18.0
+unstructured-inference==0.7.23
+unstructured.pytesseract==0.3.12
 urllib3==2.2.0
 validators==0.22.0
 watchdog==3.0.0
 wikipedia==1.4.0
 win32-setctime==1.1.0
 wrapt==1.16.0
+xlrd==2.0.1
+XlsxWriter==3.1.9
 yarl==1.9.4
 zipp==3.17.0
