--- a/requirements.txt
+++ b/requirements.txt
@@ -61,15 +61,15 @@ jsonpath-python==1.0.6
 jsonpointer==2.4
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
-langchain==0.1.8
+langchain==0.1.9
 langchain-community==0.0.21
-langchain-core==0.1.24
+langchain-core==0.1.26
 langchain-google-genai==0.0.9
 langchain-openai==0.0.6
 langchain-pinecone==0.0.2
 langchainhub==0.1.14
 langdetect==1.0.9
-langsmith==0.1.2
+langsmith==0.1.7
 loguru==0.7.2
 lxml==5.1.0
 markdown-it-py==3.0.0
@@ -86,10 +86,11 @@ oauthlib==3.2.2
 onnxruntime==1.17.0
 openai==1.11.1
 opencv-python==4.9.0.80
+orjson==3.9.15
 packaging==23.2
 pandas==2.2.0
 Pillow==10.0.1
-pinecone-client==3.0.2
+pinecone-client==3.1.0
 proto-plus==1.23.0
 protobuf==4.25.2
 pyarrow==15.0.0
@@ -132,6 +133,7 @@ st-pages==0.4.5
 streamlit==1.31.1
 streamlit-authenticator==0.3.1
 streamlit-feedback==0.1.3
+streamlit-float==0.3.2
 sympy==1.12
 tabulate==0.9.0
 tavily-python==0.3.1
